--- a/style.css
+++ b/style.css
@@ -36,8 +36,6 @@ html, body {
   width: 3.7rem;
   margin: 0.2rem 0.3rem;
   background: #141214;
-  font-size: 0;
-  color: #ffffff;
   border-radius: 5px;
   cursor: pointer;
   display: flex;
@@ -45,47 +43,6 @@ html, body {
   align-items: center;
   box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
 }
-/**
-.grid .card.open {
-  transform: rotateY(0);
-  background: #02b3e4;
-  cursor: default;
-  animation-name: flipInY;
-  -webkit-backface-visibility: visible !important;
-  backface-visibility: visible !important;
-  animation-duration: .75s;
-}
-
-.grid .card.show {
-  font-size: 33px;
-}
-
-.grid .card.match {
-  cursor: default;
-  background: #E5F720;
-  font-size: 33px;
-  animation-name: rubberBand;
-  -webkit-backface-visibility: visible !important;
-  backface-visibility: visible !important;
-  animation-duration: .75s;
-}
-
-.grid .card.unmatched {
-  animation-name: pulse;
-  -webkit-backface-visibility: visible !important;
-  backface-visibility: visible !important;
-  animation-duration: .75s;
-  background: #e2043b;
-}
-
-.grid .card.disabled {
-  pointer-events: none;
-  opacity: 0.9;
-}
-
-
-
-
 
 .card {
   position: relative;
@@ -93,21 +50,15 @@ html, body {
   transform-style: preserve-3d;
   margin: 5px;
 }
-
-.card,
-.back,
-.front {
-  height: 150px;
-  width: 150px;
+.card, .back, .front {
+  height: 125px;
+  width: 125px;
+  border-radius: 5px;
 }
-
-.back,
-.front {
+.back, .front {
   position: absolute;
   backface-visibility: hidden;
 }
-
-
 .back {
   transform: rotateY(180deg);
   background-color: #6589F9;
@@ -115,16 +66,12 @@ html, body {
   background-repeat: no-repeat;
   background-position: center center;
 }
-
 .selected {
   transform: rotateY(180deg);
 }
-
 .match .front {
   background: #706e70 !important;
 }
-
-**/
 
 
 @media (max-width: 320px) {
