--- a/style.css
+++ b/style.css
@@ -20,36 +20,31 @@ html, body {
   flex-direction: column;
 }
 
-.grid {
+#grid {
   background: #716F71;
   padding: 1rem;
-  border-radius: 5px;
   box-shadow: 8px 9px 26px 0 rgba(46, 61, 73, 0.5);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+  border-radius: 5px;
 }
 
-.grid .card {
-  height: 3.7rem;
-  width: 3.7rem;
+.card {
   margin: 0.2rem 0.3rem;
   background: #141214;
-  border-radius: 5px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-}
-
-.card {
   position: relative;
   transition: all .4s linear;
   transform-style: preserve-3d;
   margin: 5px;
 }
+
 .card, .back, .front {
   height: 125px;
   width: 125px;
@@ -69,16 +64,20 @@ html, body {
 .selected {
   transform: rotateY(180deg);
 }
-.match .front {
-  background: #706e70 !important;
+.match .front, .match {
+  background: #716F71;
+  box-shadow: none;
+  border-radius: 0px;
+  cursor: auto;
 }
 
 
+
 @media (max-width: 320px) {
-  .grid {
+  #grid {
     width: 85%;
   }
-  .grid .card {
+  #grid .card {
     height: 4.7rem;
     width: 4.7rem;
   }
@@ -87,11 +86,11 @@ html, body {
   #game {
     font-size: 22px;
   }
-  .grid {
+  #grid {
     width: 660px;
     height: 680px;
   }
-  .grid .card {
+  #grid .card {
     height: 125px;
     width: 125px;
   }
