--- a/style.css
+++ b/style.css
@@ -1,62 +1,39 @@
 
 
-html {
-  box-sizing: border-box;
-}
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+body{
+  background-image: url("beanstalk.png");
 }
 
 #game {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-#grid {
-  background: #716F71;
-  padding: 1rem;
-  box-shadow: 8px 9px 26px 0 rgba(46, 61, 73, 0.5);
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  border-radius: 5px;
+  display: grid;
+  /**grid: auto-flow 140px / repeat(4, 100px);**/
+  grid-template-columns: repeat(4, 100px);
+  grid-gap: 3%;
+  list-style-type: none;
 }
 
 .card {
   margin: 0.2rem 0.3rem;
-  background: #141214;
+  background: #54016b;
   cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
   position: relative;
   transition: all .4s linear;
   transform-style: preserve-3d;
   margin: 5px;
-}
-
-.card, .back, .front {
   height: 125px;
   width: 125px;
   border-radius: 5px;
 }
 .back, .front {
+  height: 125px;
+  width: 125px;
+  border-radius: 5px;
   position: absolute;
   backface-visibility: hidden;
 }
 .back {
   transform: rotateY(180deg);
-  background-color: #6589F9;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -65,39 +42,17 @@ html, body {
   transform: rotateY(180deg);
 }
 .match .front, .match {
-  background: #716F71;
+  opacity: 0;
   box-shadow: none;
   border-radius: 0px;
   cursor: auto;
 }
-
-
-
-@media (max-width: 320px) {
-  #grid {
-    width: 85%;
-  }
-  #grid .card {
-    height: 4.7rem;
-    width: 4.7rem;
-  }
+.match2{
+  background: none;
+  box-shadow: none;
+  border-radius: 0px;
 }
-@media (min-width: 768px) {
-  #game {
-    font-size: 22px;
-  }
-  #grid {
-    width: 660px;
-    height: 680px;
-  }
-  #grid .card {
-    height: 125px;
-    width: 125px;
-  }
-  .popup {
-    width: 60%;
-  }
-}
+
 
 
 
