--- a/grid-component/style.css
+++ b/grid-component/style.css
@@ -2,12 +2,7 @@
 body {
   margin: 40px;
 }
-.game {
-    min-width: 400px;
-    max-width: 600px;
-    box-shadow: 0 2px 3px rgba(0,0,0,0.05);
-    border: 1px solid #e6e6e6;
-}
+
 .header {
     background: #f2f2f2;
     border: 1px solid #e6e6e6;
@@ -15,18 +10,25 @@ body {
     padding-left: 0.5rem;
     justify-content: space-around;
 }
-.cards-wrapper {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
-    padding: 0.8em 1em;
-    position: relative;
+.container {
     background-color: #fff;
+  display: inline-block;
+  box-shadow: 0 2px 3px rgba(0,0,0,0.05);
+  border: 1px solid #e6e6e6;
 }
-.card {
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 125px);
+  grid-template-rows: repeat(4, 125px);
+  grid-gap: 10px;
+  padding: 0.8em 1em;
+}
+.grid div {
     background: #f2f2f2;
     border-radius: 3px;
     padding: 1em;
 }
+
+
 
 
