--- a/grid-component/style.css
+++ b/grid-component/style.css
@@ -3,15 +3,7 @@ body {
   margin: 40px;
 }
 
-.header {
-    background: #f2f2f2;
-    border: 1px solid #e6e6e6;
-    display: flex;
-    padding-left: 0.5rem;
-    justify-content: space-around;
-}
 .container {
-    background-color: #fff;
   display: inline-block;
   box-shadow: 0 2px 3px rgba(0,0,0,0.05);
   border: 1px solid #e6e6e6;
@@ -26,9 +18,28 @@ body {
 .grid div {
     background: #f2f2f2;
     border-radius: 3px;
-    padding: 1em;
 }
 
-
-
+.header {
+    background: #f2f2f2;
+    display: flex;
+}
+.header div {
+	border-right: 1px solid #fff;
+	background: #50086e;
+	flex-grow: 1;
+	text-align: center;
+}
+.header .active a {
+	background-color: #fff !important;
+    color: #3b3a3c !important;
+    position: relative;
+    z-index: 100;
+    border: 0;
+}
+.header a {
+	color: #fff;
+    display: block;
+    padding: 12px 0;
+}
 
