--- a/style.css
+++ b/style.css
@@ -9,62 +9,56 @@ body {
   box-shadow: 0 2px 3px rgba(0,0,0,0.05);
   border: 1px solid #e6e6e6;
   background-color: #fff;
-  /*border: 1px solid #d2d2dc;
-  border-radius: 0 0 4px 4px;*/
 }
 
-.header {
-    background: #f2f2f2;
-    display: flex;
+#header {
+  background: #f2f2f2;
+  display: flex;
 }
-.header div {
+
+#header div {
   border-right: 1px solid #fff;
   background: #50086e;
   flex-grow: 1;
   text-align: center;
 }
-.header .active a {
+
+#header .active a {
   background-color: #fff !important;
-    color: #3b3a3c !important;
-    position: relative;
-    z-index: 100;
-    border: 0;
-}
-.header a {
-    color: #fff;
-    display: block;
-    padding: 12px 0;
-    font: 400 1rem/1.5 Arial,sans-serif;
+  color: #3b3a3c !important;
+  position: relative;
+  z-index: 100;
+  border: 0;
 }
 
-.grid {
+#header a {
+  color: #fff;
+  display: block;
+  padding: 12px 0;
+  font: 400 1rem/1.5 Arial,sans-serif;
+}
+
+#game {
   display: grid;
   grid-template-columns: repeat(4, 140px);
   grid-template-rows: repeat(4, 140px);
   grid-gap: 10px;
-  padding: 0.8em 1em;
-  /*padding: 2em;*/
+  padding: 1em;
 }
-.grid .card {
-    border-radius: 3px;
-    /*margin: 0.2rem 0.3rem;
-    margin: 5px;*/
-    cursor: pointer;
-    /*box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);*/
-    /*position: relative;*/
-    transition: all .4s linear;
-    transform-style: preserve-3d;
-    /*height: 125px;
-    width: 125px;*/
-    border-radius: 5px;
+
+#game .card {
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow: 2px 2px 1px 0 rgba(46, 61, 73, 0.5);
+  transition: all .4s linear;
+  transform-style: preserve-3d;
+  border-radius: 5px;
 }
 
 .portrait { background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(209,220,32,1) 50%, rgba(234,241,45,1) 75%);}
 .landscape { background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,219,163,1) 50%, rgba(44,232,132,1) 75%);}
 .impressionism { background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,200,219,1) 50%, rgba(44,181,232,1) 75%);}
 .abstract{ background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(222,128,34,1) 50%, rgba(232,97,44,1) 75%);}
-
-
 
 .back, .front {
   height: 140px;
@@ -73,16 +67,19 @@ body {
   position: absolute;
   backface-visibility: hidden;
 }
+
 .back {
   transform: rotateY(180deg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
 }
+
 .selected {
   transform: rotateY(180deg);
 }
-.grid .match {
+
+#game .match {
   opacity: 0;
   box-shadow: none;
   border-radius: 0px;
@@ -93,4 +90,38 @@ body {
   transition: none !important;
 }
 
+#last-artwork-matched {
+  padding: 8px;
+  font: 400 1rem/1.5 Arial,sans-serif;
+  color: rgb(168, 168, 168);
+}
 
+#matched-image-title {
+  font-style: italic;
+  font-size: 19px;
+}
+
+@media (max-width: 800px) {
+  #game {
+    grid-template-columns: repeat(4, 120px);
+    grid-template-rows: repeat(4, 120px);
+  }
+  .back, .front {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+@media (max-width: 440px) {
+  #game {
+    grid-template-columns: repeat(4, 76px);
+    grid-template-rows: repeat(4, 76px);
+  }
+  .back, .front {
+    width: 76px;
+    height: 76px;
+  }
+  body {
+    margin: 0;
+  }
+}
