--- a/style.css
+++ b/style.css
@@ -11,19 +11,19 @@ body {
   background-color: #fff;
 }
 
-#header {
+.genreButtons {
   background: #f2f2f2;
   display: flex;
 }
 
-#header div {
+.genreButtons button {
   border-right: 1px solid #fff;
   background: #50086e;
   flex-grow: 1;
   text-align: center;
 }
 
-#header .active a {
+.genreButtons .selectedButton {
   background-color: #fff !important;
   color: #3b3a3c !important;
   position: relative;
@@ -31,14 +31,14 @@ body {
   border: 0;
 }
 
-#header a {
+.genreButtons button {
   color: #fff;
   display: block;
   padding: 12px 0;
   font: 400 1rem/1.5 Arial,sans-serif;
 }
 
-#game {
+.cardsGrid {
   display: grid;
   grid-template-columns: repeat(4, 140px);
   grid-template-rows: repeat(4, 140px);
@@ -46,8 +46,7 @@ body {
   padding: 1em;
 }
 
-#game .card {
-  border-radius: 3px;
+.cardsGrid > div {
   cursor: pointer;
   box-shadow: 2px 2px 1px 0 rgba(46, 61, 73, 0.5);
   transition: all .4s linear;
@@ -55,12 +54,20 @@ body {
   border-radius: 5px;
 }
 
-.portrait { background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(209,220,32,1) 50%, rgba(234,241,45,1) 75%);}
-.landscape { background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,219,163,1) 50%, rgba(44,232,132,1) 75%);}
-.impressionism { background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,200,219,1) 50%, rgba(44,181,232,1) 75%);}
-.abstract{ background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(222,128,34,1) 50%, rgba(232,97,44,1) 75%);}
+.portrait > div {
+  background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(209,220,32,1) 50%, rgba(234,241,45,1) 75%);
+}
+.landscape > div {
+  background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,219,163,1) 50%, rgba(44,232,132,1) 75%);
+}
+.impressionism > div {
+  background: linear-gradient(140deg, rgba(159,184,173,1) 0%, rgba(31,200,219,1) 50%, rgba(44,181,232,1) 75%);
+}
+.abstract > div{
+  background: linear-gradient(140deg, rgba(164,187,159,1) 0%, rgba(222,128,34,1) 50%, rgba(232,97,44,1) 75%);
+}
 
-.back, .front {
+.cardBack, .cardFront {
   height: 140px;
   width: 140px;
   border-radius: 5px;
@@ -68,7 +75,7 @@ body {
   backface-visibility: hidden;
 }
 
-.back {
+.cardBack {
   transform: rotateY(180deg);
   background-size: contain;
   background-repeat: no-repeat;
@@ -79,7 +86,7 @@ body {
   transform: rotateY(180deg);
 }
 
-#game .match {
+.cardsGrid .matched {
   opacity: 0;
   box-shadow: none;
   border-radius: 0px;
@@ -102,22 +109,22 @@ body {
 }
 
 @media (max-width: 800px) {
-  #game {
+  .cardsGrid {
     grid-template-columns: repeat(4, 120px);
     grid-template-rows: repeat(4, 120px);
   }
-  .back, .front {
+  .cardBack, .cardFront {
     width: 120px;
     height: 120px;
   }
 }
 
 @media (max-width: 440px) {
-  #game {
+  .cardsGrid {
     grid-template-columns: repeat(4, 76px);
     grid-template-rows: repeat(4, 76px);
   }
-  .back, .front {
+  .cardBack, .cardFront {
     width: 76px;
     height: 76px;
   }
